Added all the booking logic and booking details page / activity pages added of diiferent

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Food Ordering System (YogiByte)</string>
+    <string name="app_name">Yogi Byte</string>
 </resources>
